--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:frontend-job_portal": "node dist/frontend-job_portal/server/server.mjs"
+    "serve:ssr:frontend-job_portal": "node dist/frontend-job_portal/server/server.mjs",
+    "prettier:fix": "prettier --write \"src/**/*.{ts,js,json,css,html,scss}\"",
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
@@ -33,12 +35,18 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "husky": "^9.1.7",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^15.5.1",
+    "prettier": "3.5.3",
     "typescript": "~5.7.2"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
